<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/content"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progressPoster"
                    android:layout_width="wrap_content"
                    android:layout_height="520dp"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_22"
                    android:src="@drawable/back_button" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_32">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_20"
                    tools:text="Изгой-один: Звёздные войны" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="@dimen/sp_14"
                    tools:text="Сопротивление собирает отряд для выполнения особой миссии - надо выкрасть чертежи самого совершенного и мертоносного оружия Империи. Не всем суждено вернуться домой, но герои готовы к этому, ведь на кону судьба Галактики" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/title_genre"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_4"
                        android:layout_marginTop="@dimen/dp_16"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/sp_14"
                        tools:text="фантастика, приключения" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/title_country"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/countries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_4"
                        android:layout_marginTop="@dimen/dp_16"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="@dimen/sp_14"
                        tools:text="США, РОССИЯ" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:indeterminateTint="@color/indeterminateTint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_internet_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_40"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/no_internet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_32"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/no_internet"
                android:textAlignment="center"
                android:textColor="@color/fav_on"
                android:textSize="@dimen/sp_14" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/retry"
                style="@style/ButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/repeat" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>